styles.css
body {
    font-family: 'Arial', sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
    color: #333;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

header {
    background-color: #333;
    color: #fff;
}

header h1 {
    margin: 0;
}

#work-samples {
    margin-top: 2rem;
}

#work-samples h2 {
    font-size: 3rem;
    color: #fff;
    margin-bottom: 1rem;
}

#work-samples h5 {
    font-size: 1.75rem;
    color: #fff;
}

footer {
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 1em 0;
}

footer p {
    margin: 0;
}

footer p.small {
    font-size: 0.75rem;
}

